tests/requests/valid/007.http
GET /get_one_header_no_body HTTP/1.1\r\n
Accept: */*\r\n
\r\n