tests/requests/invalid/010.http
GET /test HTTP/1.1\r\n
Accept: */*\r\n
\r\n
